# GeometryTheoremProver

./: .clangd  .gitignore  CMakeLists.txt  Dev Setup.md  README.md  constructions.txt  line_counter.sh  out.txt  outline.md  rules.txt
notes/: Algebraic Reasoning.md  Construction Definitions.md  Dev Setup.md  Geometric Graph.md  Outline.md  Variable Ordering.md
problems/: 110-problems.txt  constructions.txt  profiler.ipynb  profiler_summary.csv  profiler_summary.txt  rules.txt
problems/110-problems/: 110-problems-1-to-50.txt  110-problems-51-to-110.txt  110-problems.txt  out-1-to-50.txt  out-51-to-110.txt  profiler.txt
problems/contri-simtri/: problems.txt
problems/cyclic-ar-angles/: problems.txt  rules.txt
problems/imo/: 2000-1.txt  2000-6.txt  2002-2a.txt  2002-2b.txt  2003-4.txt  2004-1.txt  2004-5.txt  2005-5.txt  2007-4.txt  2008-1.txt  2008-1b.txt  2009-2.txt  2010-2.txt  2010-4.txt  2011-6.txt  2012-1.txt  2012-5.txt  2013-4.txt  2014-4.txt  2015-3.txt  2015-4.txt  2016-1.txt  2017-4.txt  2018-1.txt  2019-2.txt  2019-6.txt  2020-1.txt  2021-3.txt  2022-4.txt  out-2000-1.txt  out-2000-6.txt  out-2002-2a.txt  out-2002-2b.txt  out-2003-4.txt  out-2004-1.txt  out-2004-5.txt  out-2005-5.txt  out-2007-4.txt  out-2008-1.txt  out-2008-1b.txt  (+19 more)
problems/jgex-231/: jgex-231-1-to-20.txt  jgex-231-21-to-40.txt  jgex-231-41-to-60.txt  out-1-to-20.txt  out-21-to-40.txt  out-41-to-60.txt  profiler.txt
problems/mo-tg-225/: mo-tg-225-1-to-5.txt  mo-tg-225-11-to-15.txt  (+9 more)
src/: CMakeLists.txt  GTPEngine.cpp  GTPEngine.hh  main.cpp
tests/: CMakeLists.txt  test_main.cpp
(+99 files in other folders)
